syntax = "proto3";
package gedit.store;

option java_multiple_files = true;
option java_package = "com.github.conanchen.gedit.store.member.grpc";
option java_outer_classname = "StoreMemberProto";
option objc_class_prefix = "STMEM";

import "gedit/common.proto";

// The storemember service definition.
service StoreMemberApi {
    rpc Add (AddMembershipRequest) returns (MembershipResponse) {
    }

    rpc Update (UpdateMembershipRequest) returns (MembershipResponse) {
    }

    rpc ListByStore (ListMembershipByStoreRequest) returns (stream MembershipResponse) {
    }

    rpc ListByMember (ListMembershipByMemberRequest) returns (stream MembershipResponse) {
    }


    rpc Ban (BanMembershipRequest) returns (BanMembershipResponse) {
    }

}

message AddMembershipRequest {
    string storeId = 1;
    string memberId = 3;
}

message UpdateMembershipRequest {
    string memberId = 1;
    string memberType = 3;
    string storeId = 5;
    int64 startTime = 9;
    int64 endTime = 10;

    bool isMemberTypeUpdate = 100;
    bool isStartTimeUpdate = 102;
    bool isEndTimeUpdate = 103;

}


message ListMembershipByStoreRequest {
    string storeId = 1;
    int32 from = 100;
    int32 size = 101;
}


message ListMembershipByMemberRequest {
    string memberId = 3;
    int32 from = 100;
    int32 size = 101;
}

message MembershipResponse {
    Status status = 999;
    string memberId = 1;
    string memberType = 3;
    string storeId = 5;
    bool active = 7;
    int64 startTime = 9;
    int64 endTime = 10;

    int32 from = 100;
}

message BanMembershipRequest {
    string memberId = 1;
    string storeId = 5;
    bool active = 7;
}
message BanMembershipResponse {
    Status status = 999;
    string memberId = 1;
    string storeId = 5;
    bool active = 7;
}

